# depress

./: .gitignore  CNAME  DIED.md  LICENSE  ListOfWindowsFunctionsInDepress.txt  README.md  README.ru.md  depress.html  depress.ru.html  index.html  index.ru.html  yandex_5bc1ae94534cbd45.html
BUILD_CMAKE/: CMakeLists.txt
BUILD_MSVC2013/depress/: depress.sln  depress.vcxproj  depress.vcxproj.filters
BUILD_MSVC2013/depressed/: depressed.vcxproj  depressed.vcxproj.filters
BUILD_MSVC2019/depress/: depress.sln  depress.vcxproj  depress.vcxproj.filters
BUILD_MSVC2019/depressed/: depressed.vcxproj  depressed.vcxproj.filters
BUILD_OPENWATCOM/: depress.tgt  depress.wpj
BUILD_UNIX_MAKEFILE/: Makefile  README-Alt-Linux.txt  makefile
doc/: DEPRESS.md  DEPRESS.ru.md  DIED.md
include/: depress_converter.h  depress_document.h  depress_flags.h  depress_image.h  depress_maker.h  depress_maker_djvu.h  depress_outlines.h  depress_paths.h  depress_tasks.h  depress_threads.h  depressed_app.h  depressed_console.h  depressed_document.h  depressed_gui.h  depressed_gui_documentflags.h  depressed_gui_maindlg.h  depressed_gui_pageflags.h  depressed_open.h  depressed_page.h  interlocked_ptr.h  ppm_save.h
resources/: applications.manifest
src/: depress.c  depress_converter.c  depress_document.c  depress_image.c  depress_maker_djvu.c  depress_outlines.c  depress_paths.c  depress_tasks.c  depress_threads.c  depressed.cpp  depressed_console.cpp  depressed_document.cpp  depressed_gui.cpp  depressed_gui_documentflags.cpp  depressed_gui_maindlg.cpp  depressed_gui_pageflags.cpp  depressed_open.cpp  depressed_page.cpp  interlocked_ptr.c  ppm_save.c
src/extclib/: wcstombsl.c  wcstombsl.h
src/unixsupport/: pclose.h  permissions.h  waccess.c  waccess.h  wfopen.c  wfopen.h  wgetcwd.c  wgetcwd.h  wmain_stdc.c  wmkdir.c  wmkdir.h  wpopen.c  wpopen.h  wremove.c  wremove.h  wrmdir.c  wrmdir.h  wtoi.c  wtoi.h
test/: test.died  test.outline.txt  test.txt
