cmake_minimum_required(VERSION 3.10)
project(depress VERSION 1.5)

set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED True)

option(BUILD_DEPRESSED "Build Depressed gui" OFF)

list(APPEND LIBDEPRESS_SRC ../src/depress_converter.c)
list(APPEND LIBDEPRESS_SRC ../src/depress_document.c)
list(APPEND LIBDEPRESS_SRC ../src/depress_image.c)
list(APPEND LIBDEPRESS_SRC ../src/depress_paths.c)
list(APPEND LIBDEPRESS_SRC ../src/depress_tasks.c)
list(APPEND LIBDEPRESS_SRC ../src/depress_threads.c)
list(APPEND LIBDEPRESS_SRC ../src/interlocked_ptr.c)
list(APPEND LIBDEPRESS_SRC ../src/ppm_save.c)
if(WIN32)
else()
  list(APPEND LIBDEPRESS_SRC ../src/extclib/wcstombsl.c)
  list(APPEND LIBDEPRESS_SRC ../src/unixsupport/waccess.c)
  list(APPEND LIBDEPRESS_SRC ../src/unixsupport/wfopen.c)
  list(APPEND LIBDEPRESS_SRC ../src/unixsupport/wgetcwd.c)
  list(APPEND LIBDEPRESS_SRC ../src/unixsupport/wmain_stdc.c)
  list(APPEND LIBDEPRESS_SRC ../src/unixsupport/wmkdir.c)
  list(APPEND LIBDEPRESS_SRC ../src/unixsupport/wpopen.c)
  list(APPEND LIBDEPRESS_SRC ../src/unixsupport/wremove.c)
  list(APPEND LIBDEPRESS_SRC ../src/unixsupport/wrmdir.c)
  list(APPEND LIBDEPRESS_SRC ../src/unixsupport/wtoi.c)
endif()

add_library(libdepress ${LIBDEPRESS_SRC})

list(APPEND EXTRA_LIBS libdepress)

add_executable(depress ../src/depress.c)

target_link_libraries(depress PUBLIC ${EXTRA_LIBS})

if(BUILD_DEPRESSED)
  list(APPEND DEPRESSED_SRC ../src/depressed.cpp)
  list(APPEND DEPRESSED_SRC ../src/depressed_console.cpp)
  list(APPEND DEPRESSED_SRC ../src/depressed_document.cpp)
  list(APPEND DEPRESSED_SRC ../src/depressed_gui.cpp)
  list(APPEND DEPRESSED_SRC ../src/depressed_gui_documentflags.cpp)
  list(APPEND DEPRESSED_SRC ../src/depressed_gui_maindlg.cpp)
  list(APPEND DEPRESSED_SRC ../src/depressed_gui_pageflags.cpp)
  list(APPEND DEPRESSED_SRC ../src/depressed_open.cpp)
  list(APPEND DEPRESSED_SRC ../src/depressed_page.cpp)

  if(WIN32)
    add_executable(depressed WIN32 ${DEPRESSED_SRC})
  else()
    add_executable(depressed ${DEPRESSED_SRC})
  endif()

  target_link_directories(depressed PUBLIC "${PROJECT_SOURCE_DIR}/../src/third_party/iup/x64")
  target_include_directories(depressed PUBLIC "${PROJECT_SOURCE_DIR}/../src/third_party/iup/include")

  if(WIN32)
    target_link_libraries(depressed PUBLIC ${EXTRA_LIBS} iup.lib XmlLite.lib Shlwapi.lib)
  else()
    target_link_libraries(depressed PUBLIC ${EXTRA_LIBS} iup)
  endif()
endif()